src/styles/modules/_links.scss
section.search{
  padding: 48px 16px;

  .settings-btn{
    background: transparent url(../img/settings.png) no-repeat center center;
    height: 32px;
    opacity: 1;
    position: absolute;
    right: 5px;
    top: 5px;
    transition: opacity .3s ease-in 0s;
    width: 32px;
  }

  .settings-btn:hover{
    opacity: .5;
  }

  .add{
    background: rgba(255, 255, 255, 0.1);
    box-shadow: 0 0 0 2000000px rgba(255, 255, 255, 0.1);
    left: 50%;
    opacity: 0.6;
    position: absolute;
    top: 83px;
    transform: translateX(-50%);
    transition: all 0.3s ease 0s;

    &:hover{
      background: rgba(255, 255, 255, 0.4);
      box-shadow: 0 0 0 2000000px rgba(255, 255, 255, 0.4);
      opacity: 1;
      transform: translate(-50%, 50%);
      z-index: 101;

      .add-label{
        opacity: 1;
      }
    }
    .add-btn{
      border: 3px solid;
      border-radius: 50%;
      color: #fff;
      display: inline-block;
      font-size: 2em;
      height: 46px;
      text-align: center;
      width: 46px;
    }
    .add-label{
       color: #fff;
       opacity: 0;
       text-shadow: 1px 1px 1px #666;
    }
  }
  .search-links{
    background-color: rgba(255, 255, 255, 0.8);
    padding: 16px;
    width: 100%;
  }
  .search-links-btn{
    font-weight: 600;
    max-width: 250px;
    min-width: 100px;
    padding: 15px;
    position: absolute;
    right: 0;
    top: 4px;
    width: 20%;

    &:hover{
      background: transparent;
      border-left: 1px solid transparent;
      color: $font-color;
    }
  }
}

.links-list{

  @include phone{
    padding: 4px;
  }
  
  .link.ng-enter{
    animation: fadeIn 0.3s both ease-in;
  }

  .link.ng-leave{
    animation: fadeOut 0.3s both ease-in;
  }

  .link {
    background-color: rgba(64, 130, 160, 0.8); // Color: #4082A0;
    border: 1px solid #fff;
    float: left;
    display: block;
    height: 100px;
    margin: 4px .5%;
    opacity: 1;
    overflow: hidden;
    position: relative;
    text-align: left;
    transition: all 0.4s ease 0s ;
    width: 19%;
    z-index: 10;

    @include max-responsive(2600px){
      margin: 4px .1%;
      width: 5.6667%;
    }
    @include max-responsive(2600px){
      margin: 4px .2%;
      width: 7.3%;
    }
    @include max-responsive(2200px){
      margin: 4px .2%;
      width: 9.6%;
    }
    @include max-responsive(1900px){
      margin: 4px .3%;
      width: 11.9%;
    }
    @include max-responsive(1600px){
      margin: 4px .3%;
      width: 13.68%;
    }
    @include max-responsive(1200px){
      margin: 4px .5%;
      width: 19%;
    }
    @include max-tablet{
      width: 32%;
    }
    @include max-small-tablet{
      width: 49%;
    }
    @include max-phone{
      max-width: 320px;
      margin: 0 0 10px 0;
      width: 100%;
    }

    &:hover{
      background-color: #4082A0;
      transition-delay: .5s;
    }

    &.private{
      background: rgba(64, 130, 160, 0.8) url(../img/lock.png) no-repeat bottom right;
    }

    .click-count{
      font-size: 2em;
      opacity: .5;
      position: absolute;
      right: 0;
      top: 0;
    }

    .title{
      color: #FFFFFF;
      font-size: 125%;
      padding-bottom: 0;

      @include wrap-ellipsis;
    }

    .url{
      color: #CECECE;
      cursor: pointer;
      font-size: 90%;
      transition: color .2s ease-in;

      :hover{
        color: #e4e4e4;
      }

      @include wrap-ellipsis;
    }
    

    &:hover{
      border: 1px solid rgba(255,255,255,1);
      box-shadow: 0 0 10px rgba(0, 0, 0, 0.8);
      transform: scale(1.2,1.2);
      z-index: 100;

      .tags {
        opacity: .8;
        transform: translateY(8px);
        transition: transform 0.4s ease .5s, opacity 1s ease .5s;
      }
    }
  }

  .tags {
    background-color: #2C3F52;
    height: 50px;
    width: 100%;
    top: auto;
    left: 0;
    padding: 0 5px;
    position: absolute;
    bottom: 0;
    opacity: 0;
    transform: translateY(100%);
    backface-visibility: hidden;
    transition: transform 0.4s ease .5s, opacity 1s ease .5s;

    .tag{
      background-color: #eee;
      border: 1px solid #E5E5E5;
      cursor: pointer;
      display: inline;
      font-size: 50%;
      padding: 1px 4px;
      margin: 0 1px 2px;
      transition: all .2s ease-in;

      &:hover{
        border-color: #969696;
      }
    }
  }

  .link-body{
    padding: 10px;
    cursor: pointer;
  }

  .click-count{
    color: rgba(0, 0, 0, 0.2);
    font-size: 200%;
    position: absolute;
    right: 10px;
    top: -1px;
    z-index: 11;
  }
} 

.field .export-textarea{
  height:  250px;
  max-height: 100%;
  width: 100%;
}

.add-form{
  position: absolute;
  top: 50%;
  left:50%;
  transform: translateX(-50%) translateY(-50%);
  width: 500px;
}


.btn-add-item{
  border-width: 1px;
  height: 26px;
  margin: 3px;
  padding: 0;
  position: absolute;
  width: 26px;
}

.tags .item{
  background-color: #4c4c4c;
  border-radius: 0 3px 3px 0;
  color: #FFFFFF;
  display: inline-block;
  height: 30px;
  margin: 0 5px 5px 22px;
  padding: 5px 17px 5px 5px;
  position: relative;
  transition: all 0.3s ease-in 0s;

  &:before {
    background: url("../img/tag-front.png") no-repeat scroll left center rgba(0, 0, 0, 0);
    content: "";
    height: 30px;
    left: -22px;
    position: absolute;
    top: 0;
    width: 22px;
  }

  &:hover .close{
    opacity: 1;
  }

  .close {
    cursor: pointer;
    margin-right: 5px;
    opacity: 0;
    position: absolute;
    right: 0;
    transition: all 0.3s ease-in 0s;
  }
}

